# ros-fmt-migrate

./: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  HeaderincludeguardCheck.cpp  HeaderincludeguardCheck.h  MoveConstantInitToDeclaration.cpp  MoveConstantInitToDeclaration.h  README.md  ReorderCtorInitializer.cpp  ReorderCtorInitializer.h  RosstreamtofmtCheck.cpp  RosstreamtofmtCheck.h  WORKSPACE  main.cpp  run.sh  test.sh  utils.hpp
examples/: ex1.cpp  header1.h  outoforder.hpp
